3rd - Basic landing page...

--- a/client/src/assets/scss/custom/_section.scss
+++ b/client/src/assets/scss/custom/_section.scss
@@ -289,6 +289,7 @@
         // shape color variations
         &.shape-primary {
             background: linear-gradient(150deg, shapes-primary-color("step-1-gradient-bg") 15%, shapes-primary-color("step-2-gradient-bg") 70%, shapes-primary-color("step-3-gradient-bg") 94%);
+            max-height: 700px;
         }
 
         &.shape-default {
